<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="businessname">CONFEFE LERENA RP</string>
    <string name="name">Name:</string>
    <string name="pax">Pax:</string>
    <string name="mobile">Mobile:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="reserve">Reserve</string>
    <string name="clear">Clear</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pax2">Pax</string>
</resources>